<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notification.NotificationActivity">

    <TextView
        android:id="@+id/headNotif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/notification"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/dailyNotif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/daily_reminder"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/headNotif"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/darkMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dailyNotif"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:text="Enable Dark Mode"
        android:textSize="17sp"
        tools:ignore="UseSwitchCompatOrMaterialXml"/>

    <Button
        android:id="@+id/btn_set_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/teal_200"
        android:onClick="changeLanguage"
        android:text="@string/change_language"
        android:textColorHighlight="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/darkMode" />

</androidx.constraintlayout.widget.ConstraintLayout>