<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<TextClock
    android:id="@+id/textClock"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:gravity="center"
    android:format24Hour="hh:mm:ss: a"
    app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="413dp"
        android:layout_height="277dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="269dp"
        android:layout_marginBottom="66dp"
        android:background="@color/teal_700"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:layout_constraintBottom_toTopOf="@id/tabLayout"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="19dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="150dp" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/type"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="23dp"
        android:layout_height="22dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tv_type"
        app:srcCompat="@drawable/ic_baseline_apartment_24" />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/company"
        android:textColor="@color/teal_200"
        app:layout_constraintStart_toStartOf="@id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/tv_type" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="23dp"
        android:layout_height="22dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/ic_baseline_location_on_24" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/location"
        android:textColor="@color/teal_200"
        app:layout_constraintStart_toStartOf="@id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/tv_company" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/ic_baseline_repository24" />
    <TextView
        android:id="@+id/tv_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        android:visibility="invisible"
        android:layout_marginStart="6dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/imageView3"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following"
        android:visibility="invisible"
        android:layout_marginStart="6dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/imageView3"
        app:layout_constraintStart_toEndOf="@id/tv_follower" />
    <TextView
        android:id="@+id/tv_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/repository"
        android:textColor="@color/teal_200"
        app:layout_constraintStart_toStartOf="@id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_repository">

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_company"
        app:layout_constraintEnd_toStartOf="@+id/img_avatar"
        app:layout_constraintStart_toEndOf="@+id/tv_type" />

</androidx.constraintlayout.widget.ConstraintLayout>